- 1.0.7 - colorPrimary 명칭 변경

--- a/ax-permission/src/main/res/values/attrs.xml
+++ b/ax-permission/src/main/res/values/attrs.xml
@@ -67,4 +67,9 @@
         <attr name="android:paddingHorizontal"/>
         <attr name="android:gravity"/>
     </declare-styleable>
+
+    <declare-styleable name="CustomTheme">
+        <attr name="colorBackGround" format="color" />
+        <attr name="colorBackGroundDark" format="color" />
+    </declare-styleable>
 </resources>
