--- a/ax-permission/src/main/res/drawable/permssion_layout_false_bg.xml
+++ b/ax-permission/src/main/res/drawable/permssion_layout_false_bg.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape> <!-- 배경 -->
-            <solid android:color="@color/colorPrimary" /> <!-- 테두리 -->
+            <solid android:color="@color/colorBackGround" /> <!-- 테두리 -->
             <stroke
                 android:width="1dp"
                 android:color="@color/colorLine" />
