--- a/ax-permission/src/main/res/layout/activity_permission.xml
+++ b/ax-permission/src/main/res/layout/activity_permission.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorBackGround"
         android:minHeight="?android:attr/actionBarSize"
         app:contentInsetStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
