--- a/ax-permission/src/main/res/values-night/themes.xml
+++ b/ax-permission/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Compass" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorBackGround">@color/colorBackGround</item>
+        <item name="colorBackGroundDark">@color/colorBackGroundDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/colorStatus</item>
@@ -14,8 +14,8 @@
     <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorBackGround">@color/colorBackGround</item>
+        <item name="colorBackGroundDark">@color/colorBackGroundDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
