--- a/ax-permission/src/main/res/layout/dialog_permission_item.xml
+++ b/ax-permission/src/main/res/layout/dialog_permission_item.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/per_Icon"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
