--- a/ax-permission/src/main/res/layout/dialog_permission_item.xml
+++ b/ax-permission/src/main/res/layout/dialog_permission_item.xml
@@ -55,7 +55,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="설정"
+                android:text="@string/dialog_set"
                 android:textColor="@color/black"
                 android:fontFamily="@font/scdream5"
                 android:textSize="16sp"
@@ -80,7 +80,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="취소"
+                android:text="@string/dialog_cancel"
                 android:textColor="@color/black"
                 android:fontFamily="@font/scdream5"
                 android:textSize="16sp"
