--- a/ax-permission/src/main/res/layout/adapter_permission_body_item.xml
+++ b/ax-permission/src/main/res/layout/adapter_permission_body_item.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/perSetText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="설정"
+                android:text="@string/dialog_set"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/scdream5"
