--- a/ax-permission/src/main/res/layout/item_ax_permission_header.xml
+++ b/ax-permission/src/main/res/layout/item_ax_permission_header.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="header"
-            type="kr.co.permission.ax_permission.model.Item.Header" />
+            type="com.ax.library.ax_permission.model.Item.Header" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
