--- a/ax-permission/src/main/res/layout/activity_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/activity_ax_permission.xml
@@ -1,64 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cl_permission_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/ax_permission_background_color"
-    android:animateLayoutChanges="true"
-    tools:alpha="1">
-
-    <!-- 상단 제목 -->
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_title"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cl_permission_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="18dp"
-        android:layout_marginHorizontal="18dp"
-        android:gravity="center"
-        tools:text="@string/ax_permission_title"
-        android:textSize="22sp"
-        android:textColor="@color/ax_permission_text_color_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/permission_list_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/ax_permission_background_color"
+        android:animateLayoutChanges="true"
+        tools:alpha="1">
 
-    <!-- 권한 목록 -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/permission_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:overScrollMode="never"
-        android:scrollbars="vertical"
-        android:requiresFadingEdge="vertical"
-        tools:listitem="@layout/item_ax_permission"
-        tools:itemCount="3"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintBottom_toTopOf="@id/btn_bottom_button"/>
+        <!-- 상단 제목 -->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_marginBottom="18dp"
+            android:layout_marginHorizontal="18dp"
+            android:gravity="center"
+            tools:text="@string/ax_permission_title"
+            android:textSize="22sp"
+            android:textColor="@color/ax_permission_text_color_dark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/permission_list_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- 완료 버튼 -->
-    <com.ax.library.ax_permission.customview.InteractiveTextView
-        android:id="@+id/btn_bottom_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginHorizontal="18dp"
-        android:padding="12dp"
-        android:gravity="center"
-        android:text="@string/ax_permission_bottom_button_text_allow_all"
-        android:textSize="18sp"
-        android:textColor="@color/ax_permission_secondary_button_text_color"
-        android:textStyle="normal"
-        android:includeFontPadding="false"
-        android:foreground="@drawable/ripple_foreground_ax_permission"
-        android:background="@drawable/bg_ax_permission_secondary_button"
-        app:layout_constraintTop_toBottomOf="@id/permission_list_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <!-- 권한 목록 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/permission_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            android:scrollbars="vertical"
+            android:requiresFadingEdge="vertical"
+            tools:listitem="@layout/item_ax_permission"
+            tools:itemCount="3"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            app:layout_constraintBottom_toTopOf="@id/btn_bottom_button"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- 완료 버튼 -->
+        <com.ax.library.ax_permission.customview.InteractiveTextView
+            android:id="@+id/btn_bottom_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="18dp"
+            android:layout_marginHorizontal="18dp"
+            android:padding="12dp"
+            android:gravity="center"
+            android:text="@string/ax_permission_bottom_button_text_allow_all"
+            android:textSize="18sp"
+            android:textColor="@color/ax_permission_secondary_button_text_color"
+            android:textStyle="normal"
+            android:includeFontPadding="false"
+            android:foreground="@drawable/ripple_foreground_ax_permission"
+            android:background="@drawable/bg_ax_permission_secondary_button"
+            app:layout_constraintTop_toBottomOf="@id/permission_list_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
