--- a/ax-permission/src/main/res/layout/item_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/item_ax_permission.xml
@@ -7,6 +7,9 @@
         <variable
             name="permission"
             type="com.ax.library.ax_permission.model.Item.PermissionItem" />
+        <variable
+            name="isHighlighted"
+            type="Boolean" />
     </data>
 
     <com.ax.library.ax_permission.customview.InteractiveConstraintLayout
@@ -20,6 +23,20 @@
         android:paddingVertical="10dp"
         android:paddingHorizontal="9dp"
         android:foreground="@drawable/ripple_foreground_ax_permission">
+
+        <!-- 하이라이트 Scrim -->
+        <View
+            android:id="@+id/view_scrim"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#1A000000"
+            android:visibility="@{isHighlighted ? View.VISIBLE : View.GONE}"
+            android:clickable="false"
+            android:focusable="false"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <!-- 아이콘 -->
         <androidx.appcompat.widget.AppCompatImageView
