--- a/ax-permission/src/main/res/layout/item_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/item_ax_permission.xml
@@ -5,7 +5,7 @@
         <import
             type="android.view.View" />
         <variable
-            name="permission"
+            name="permissionItem"
             type="com.ax.library.ax_permission.model.Item.PermissionItem" />
         <variable
             name="isHighlighted"
@@ -20,16 +20,45 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="9dp"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="9dp"
-        android:foreground="@drawable/ripple_foreground_ax_permission">
+        android:foreground="@drawable/ripple_foreground_ax_permission"
+        android:animateLayoutChanges="true">
+        <!--android:background="@drawable/bg_ax_permission_item"-->
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="10dp"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="10dp"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="9dp"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="9dp"/>
 
         <!-- 하이라이트 Scrim -->
         <View
-            android:id="@+id/view_scrim"
+            android:id="@+id/view_highlighted_scrim"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#1A000000"
+            android:background="@drawable/bg_ax_permission_item_highlight_scrim"
+            android:alpha="0.2"
             android:visibility="@{isHighlighted ? View.VISIBLE : View.GONE}"
             android:clickable="false"
             android:focusable="false"
@@ -47,9 +76,9 @@
             tools:src="@drawable/ic_ax_permission_draw_overlays"
             android:background="@drawable/bg_ax_permission_item_icon"
             android:tint="@color/selector_ax_permission_item_icon_color"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"/>
 
         <!-- 권한 이름 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -58,14 +87,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             tools:text="@string/ax_permission_draw_overlays_name"
-            android:text="@{permission.name}"
+            android:text="@{permissionItem.permission.titleResId}"
             android:textSize="18sp"
             android:textColor="@color/selector_ax_permission_item_color"
             app:layout_constrainedWidth="true"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
             app:layout_constraintBottom_toTopOf="@id/tv_permission_description"
             app:layout_constraintStart_toEndOf="@id/iv_permission_icon"
             app:layout_constraintEnd_toStartOf="@id/tv_permission_granted_badge"/>
@@ -83,12 +112,12 @@
             android:textColor="@color/ax_permission_primary_color"
             android:textStyle="normal"
             android:background="@drawable/bg_ax_permission_item_granted_badge"
-            android:visibility="@{permission.granted ? View.VISIBLE : View.GONE}"
+            android:visibility="@{permissionItem.granted ? View.VISIBLE : View.GONE}"
             tools:visibility="visible"
             app:layout_constraintTop_toTopOf="@id/tv_permission_name"
             app:layout_constraintBottom_toBottomOf="@id/tv_permission_name"
             app:layout_constraintStart_toEndOf="@id/tv_permission_name"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
 
         <!-- 권한 설명 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -98,14 +127,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             tools:text="@string/ax_permission_draw_overlays_description"
-            android:text="@{permission.description}"
+            android:text="@{permissionItem.permission.descriptionResId}"
             android:textColor="@color/ax_permission_text_color_light"
             android:lineSpacingExtra="-2dp"
             app:layout_constrainedWidth="true"
             app:layout_constraintTop_toBottomOf="@id/tv_permission_name"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintStart_toStartOf="@id/tv_permission_name"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
 
     </com.ax.library.ax_permission.customview.InteractiveConstraintLayout>
 </layout>
