--- a/ax-permission/src/main/res/values-night/colors.xml
+++ b/ax-permission/src/main/res/values-night/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ax_permission_primary_color">#ff794b</color>
+    <color name="ax_permission_primary_color">#4173FF</color>
 
     <color name="ax_permission_primary_button_text_color">#ffffff</color>
-    <color name="ax_permission_primary_button_background_color">#ff794b</color>
+    <color name="ax_permission_primary_button_background_color">#4173FF</color>
 
     <color name="ax_permission_secondary_button_text_color">#212124</color>
     <color name="ax_permission_secondary_button_background_color">#e9eaec</color>
@@ -21,9 +21,11 @@
     <color name="ax_permission_text_color_light">#8a8a8a</color>
 
     <color name="ax_permission_background_color">#222222</color>
+    <color name="ax_permission_item_background_color">#44cccccc</color>
+    <color name="ax_permission_item_highlight_scrim_color">#1A000000</color>
     <color name="ax_permission_divider_color">#424242</color>
 
-    <color name="ax_permission_ripple_color">#66000000</color> <!-- 4Dffffff -->
+    <color name="ax_permission_ripple_color">#44ffffff</color> <!-- 4Dffffff -->
 
     <color name="ax_permission_floating_bottom_sheet_drag_handle_color">#6f6f6f</color>
     <color name="ax_permission_floating_bottom_sheet_background_color_dialog">#3C3C3C</color>
