--- a/ax-permission/src/main/res/values/colors.xml
+++ b/ax-permission/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ax_permission_primary_color">#ff794b</color>
+    <color name="ax_permission_primary_color">#4173FF</color>
 
     <color name="ax_permission_primary_button_text_color">#ffffff</color>
-    <color name="ax_permission_primary_button_background_color">#ff794b</color>
+    <color name="ax_permission_primary_button_background_color">#4173FF</color>
 
     <color name="ax_permission_secondary_button_text_color">#ffffff</color>
     <color name="ax_permission_secondary_button_background_color">#2a3038</color>
@@ -21,9 +21,11 @@
     <color name="ax_permission_text_color_light">#8a8a8a</color>
 
     <color name="ax_permission_background_color">#ffffff</color>
+    <color name="ax_permission_item_background_color">#44cccccc</color>
+    <color name="ax_permission_item_highlight_scrim_color">#1A000000</color>
     <color name="ax_permission_divider_color">#e0e0e0</color>
 
-    <color name="ax_permission_ripple_color">#66000000</color>
+    <color name="ax_permission_ripple_color">#44000000</color>
 
     <color name="ax_permission_floating_bottom_sheet_drag_handle_color">#e0e0e0</color>
     <color name="ax_permission_floating_bottom_sheet_background_color_dialog">#FFFFFF</color>
