--- a/ax-permission/src/main/res/layout/activity_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/activity_ax_permission.xml
@@ -17,11 +17,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:layout_marginBottom="18dp"
-            android:layout_marginHorizontal="18dp"
+            android:layout_marginHorizontal="@dimen/ax_permission_content_padding"
             android:gravity="center"
             tools:text="@string/ax_permission_title"
+            android:lineHeight="30sp"
             android:textSize="22sp"
             android:textColor="@color/ax_permission_text_color_dark"
+            android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/permission_list_view"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +34,10 @@
             android:id="@+id/permission_list_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:overScrollMode="never"
+            android:overScrollMode="ifContentScrolls"
             android:scrollbars="vertical"
             android:requiresFadingEdge="vertical"
+            android:fadingEdgeLength="20dp"
             tools:listitem="@layout/item_ax_permission"
             tools:itemCount="3"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -42,21 +45,14 @@
             app:layout_constraintBottom_toTopOf="@id/btn_bottom_button"/>
 
         <!-- 완료 버튼 -->
-        <com.ax.library.ax_permission.customview.InteractiveTextView
+        <com.ax.library.ax_permission.customview.BoxButton
             android:id="@+id/btn_bottom_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="18dp"
-            android:layout_marginHorizontal="18dp"
-            android:padding="12dp"
-            android:gravity="center"
+            android:layout_marginHorizontal="@dimen/ax_permission_content_padding"
             android:text="@string/ax_permission_bottom_button_text_allow_all"
-            android:textSize="18sp"
-            android:textColor="@color/ax_permission_secondary_button_text_color"
-            android:textStyle="normal"
-            android:includeFontPadding="false"
-            android:foreground="@drawable/ripple_foreground_ax_permission"
-            android:background="@drawable/bg_ax_permission_primary_button"
+            app:box_buttonType="primary"
             app:layout_constraintTop_toBottomOf="@id/permission_list_view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
