--- a/ax-permission/src/main/res/layout/fragment_ax_permission_common_dialog.xml
+++ b/ax-permission/src/main/res/layout/fragment_ax_permission_common_dialog.xml
@@ -53,7 +53,7 @@
             tools:text="@string/ax_permission_exit_bottom_sheet_title"
             android:textSize="20sp"
             android:textColor="@color/ax_permission_text_color_dark"
-            android:textStyle="bold"
+            android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
             app:layout_constrainedWidth="true"
             app:layout_constraintTop_toBottomOf="@id/view_drag_handle"
             app:layout_constraintBottom_toTopOf="@id/nsv_scroll_container"
@@ -89,40 +89,30 @@
                     android:paddingHorizontal="0dp"
                     tools:text="@string/ax_permission_exit_bottom_sheet_message"
                     android:textSize="16sp"
-                    android:textColor="@color/ax_permission_text_color_light"/>
+                    android:textColor="@color/ax_permission_text_color_light"
+                    android:textFontWeight="@integer/ax_permission_font_weight_regular_400"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.core.widget.NestedScrollView>
 
-        <com.ax.library.ax_permission.customview.InteractiveTextView
+        <com.ax.library.ax_permission.customview.BoxButton
             android:id="@+id/btn_primary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingVertical="12dp"
             android:layout_marginStart="8dp"
-            android:gravity="center"
             tools:text="@string/ax_permission_exit_bottom_sheet_button_text_continue"
-            android:textSize="18sp"
-            android:textColor="@color/ax_permission_primary_button_text_color"
-            android:foreground="@drawable/ripple_foreground_ax_permission"
-            android:background="@drawable/bg_ax_permission_primary_button"
             app:layout_constraintTop_toBottomOf="@id/nsv_scroll_container"
             app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintStart_toEndOf="@id/btn_secondary"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
 
-        <com.ax.library.ax_permission.customview.InteractiveTextView
+        <com.ax.library.ax_permission.customview.BoxButton
             android:id="@+id/btn_secondary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingVertical="12dp"
-            android:gravity="center"
             tools:text="@string/ax_permission_exit_bottom_sheet_button_text_exit"
-            android:textSize="18sp"
-            android:textColor="@color/ax_permission_tertiary_button_text_color"
-            android:foreground="@drawable/ripple_foreground_ax_permission"
-            android:background="@drawable/bg_ax_permission_tertiary_button"
+            app:box_buttonType="tertiary"
             app:layout_constraintTop_toTopOf="@id/btn_primary"
             app:layout_constraintBottom_toBottomOf="@id/btn_primary"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
