--- a/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet.xml
+++ b/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet.xml
@@ -19,21 +19,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="18dp"/>
+            app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="18dp"/>
+            app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="18dp"/>
+            app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
         <!-- 드래그 핸들 -->
         <View
@@ -55,18 +55,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <com.ax.library.ax_permission.customview.InteractiveTextView
+        <com.ax.library.ax_permission.customview.BoxButton
             android:id="@+id/btn_positive"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:paddingVertical="12dp"
-            android:gravity="center"
             android:text="@string/ax_permission_bottom_sheet_positive_button_text_move_to_settings"
-            android:textSize="18sp"
-            android:textColor="@color/ax_permission_primary_button_text_color"
-            android:foreground="@drawable/ripple_foreground_ax_permission"
-            android:background="@drawable/bg_ax_permission_primary_button"
             app:layout_constraintTop_toBottomOf="@id/view_pager"
             app:layout_constraintBottom_toTopOf="@id/btn_negative"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -83,6 +77,7 @@
             android:text="@string/ax_permission_bottom_sheet_negative_button_text_cancel"
             android:textSize="18sp"
             android:textColor="@color/ax_permission_text_color_dark"
+            android:textFontWeight="@integer/ax_permission_font_weight_medium_500"
             android:foreground="@drawable/ripple_foreground_ax_permission"
             app:layout_constraintTop_toBottomOf="@id/btn_positive"
             app:layout_constraintBottom_toBottomOf="parent"
