--- a/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
+++ b/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
@@ -13,28 +13,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="18dp"/>
+            app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="18dp"/>
+            app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
         <!-- 아이콘 -->
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_icon"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_marginTop="24dp"
             tools:src="@drawable/ic_ax_permission_draw_overlays"
-            android:tint="@color/selector_ax_permission_item_icon_color"
-            android:background="@drawable/bg_ax_permission_item_icon"
+            android:tint="@color/ax_permission_white"
+            tools:background="@drawable/bg_ax_permission_item_icon"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/tv_title"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
+            <!--android:tint="@color/selector_ax_permission_item_icon_color"-->
+            <!--android:background="@drawable/bg_ax_permission_item_icon"-->
 
         <!-- 제목: 권한 이름 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -45,6 +47,7 @@
             tools:text="알림 접근"
             android:textSize="20sp"
             android:textColor="@color/ax_permission_text_color_dark"
+            android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
             app:layout_constraintTop_toBottomOf="@id/iv_icon"
             app:layout_constraintBottom_toTopOf="@id/nsv_scroll_container"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -75,22 +78,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="24dp"
-                    android:paddingHorizontal="6dp"
+                    android:layout_marginHorizontal="36dp"
+                    android:gravity="center"
                     tools:text="@string/ax_permission_draw_overlays_description"
-                    android:textSize="15sp"
-                    android:textColor="@color/ax_permission_text_color_light"/>
+                    android:lineHeight="22sp"
+                    android:textSize="16sp"
+                    android:textColor="@color/ax_permission_text_color_light"
+                    android:textFontWeight="@integer/ax_permission_font_weight_semibold_600"/>
 
                 <!-- 권한 가이드 -->
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_guide"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:paddingHorizontal="6dp"
-                    tools:text="@string/ax_permission_draw_overlays_guide"
+                    android:layout_marginBottom="20dp"
+                    android:paddingHorizontal="8dp"
+                    tools:text="@string/ax_permission_bottom_sheet_settings_guide_1_format"
                     android:visibility="visible"
+                    android:lineHeight="20sp"
                     android:textSize="14sp"
-                    android:textColor="@color/ax_permission_text_color_dark"/>
+                    android:textColor="@color/ax_permission_text_color_dark"
+                    android:textFontWeight="@integer/ax_permission_font_weight_regular_400"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
