--- a/ax-permission/src/main/res/layout/item_ax_permission.xml
+++ b/ax-permission/src/main/res/layout/item_ax_permission.xml
@@ -19,38 +19,39 @@
         android:id="@+id/btn_permission_app_draw_over_other_apps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="9dp"
+        android:layout_marginVertical="6dp"
+        android:layout_marginHorizontal="@dimen/ax_permission_content_padding"
         android:foreground="@drawable/ripple_foreground_ax_permission"
-        android:animateLayoutChanges="true">
-        <!--android:background="@drawable/bg_ax_permission_item"-->
+        android:background="@drawable/bg_ax_permission_item"
+        android:animateLayoutChanges="false">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="10dp"/>
+            app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="10dp"/>
+            app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="9dp"/>
+            app:layout_constraintGuide_begin="@dimen/ax_permission_content_padding"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="9dp"/>
+            app:layout_constraintGuide_end="@dimen/ax_permission_content_padding"/>
 
         <!-- 하이라이트 Scrim -->
         <View
@@ -58,8 +59,9 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/bg_ax_permission_item_highlight_scrim"
-            android:alpha="0.2"
+            android:alpha="0.1"
             android:visibility="@{isHighlighted ? View.VISIBLE : View.GONE}"
+            tools:visibility="gone"
             android:clickable="false"
             android:focusable="false"
             app:layout_constraintTop_toTopOf="parent"
@@ -70,26 +72,29 @@
         <!-- 아이콘 -->
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_permission_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="0dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             tools:src="@drawable/ic_ax_permission_draw_overlays"
             android:background="@drawable/bg_ax_permission_item_icon"
-            android:tint="@color/selector_ax_permission_item_icon_color"
+            android:tint="@color/ax_permission_white"
             app:layout_constraintTop_toTopOf="@id/guideline_top"
             app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintStart_toStartOf="@id/guideline_start"/>
+            <!--android:tint="@color/selector_ax_permission_item_icon_color"-->
 
         <!-- 권한 이름 -->
+            <!--android:textColor="@color/selector_ax_permission_item_color"-->
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_permission_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/ax_permission_content_padding"
             tools:text="@string/ax_permission_draw_overlays_name"
             android:text="@{permissionItem.permission.titleResId}"
             android:textSize="18sp"
-            android:textColor="@color/selector_ax_permission_item_color"
+            android:textColor="@color/ax_permission_text_color_dark"
+            android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
             app:layout_constrainedWidth="true"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -105,12 +110,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:paddingVertical="1.5dp"
-            android:paddingHorizontal="6dp"
+            android:paddingVertical="4dp"
+            android:paddingHorizontal="8dp"
             android:text="@string/ax_permission_item_granted"
-            android:textSize="10sp"
+            android:textSize="11sp"
             android:textColor="@color/ax_permission_primary_color"
-            android:textStyle="normal"
+            android:textFontWeight="@integer/ax_permission_font_weight_semibold_600"
             android:background="@drawable/bg_ax_permission_item_granted_badge"
             android:visibility="@{permissionItem.granted ? View.VISIBLE : View.GONE}"
             tools:visibility="visible"
@@ -125,11 +130,13 @@
             android:id="@+id/tv_permission_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             tools:text="@string/ax_permission_draw_overlays_description"
             android:text="@{permissionItem.permission.descriptionResId}"
             android:textColor="@color/ax_permission_text_color_light"
-            android:lineSpacingExtra="-2dp"
+            android:lineHeight="18sp"
+            android:textSize="14sp"
+            android:textFontWeight="@integer/ax_permission_font_weight_regular_400"
             app:layout_constrainedWidth="true"
             app:layout_constraintTop_toBottomOf="@id/tv_permission_name"
             app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
