--- a/ax-permission/src/main/res/values-night/colors.xml
+++ b/ax-permission/src/main/res/values-night/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="ax_permission_white">#FFFFFF</color>
+    <color name="ax_permission_black">#000000</color>
+    <color name="ax_permission_transparent">#00000000</color>
+
     <color name="ax_permission_primary_color">#4173FF</color>
 
     <color name="ax_permission_primary_button_text_color">#ffffff</color>
@@ -21,13 +25,15 @@
     <color name="ax_permission_text_color_light">#8a8a8a</color>
 
     <color name="ax_permission_background_color">#222222</color>
-    <color name="ax_permission_item_background_color">#44cccccc</color>
+    <color name="ax_permission_item_background_color">#303030</color>
     <color name="ax_permission_item_highlight_scrim_color">#1A000000</color>
+    <color name="ax_permission_item_icon_background_color">#6f6f6f</color>
     <color name="ax_permission_divider_color">#424242</color>
 
-    <color name="ax_permission_ripple_color">#44ffffff</color> <!-- 4Dffffff -->
+    <color name="ax_permission_ripple_color_black">#44000000</color> <!-- 4Dffffff -->
+    <color name="ax_permission_ripple_color_white">#44ffffff</color>
 
     <color name="ax_permission_floating_bottom_sheet_drag_handle_color">#6f6f6f</color>
-    <color name="ax_permission_floating_bottom_sheet_background_color_dialog">#3C3C3C</color>
+    <color name="ax_permission_floating_bottom_sheet_background_color_dialog">#303030</color>
     <color name="ax_permission_floating_bottom_sheet_outside_color">#0E0C10</color>
 </resources>
