--- a/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
+++ b/ax-permission/src/main/res/layout/fragment_permission_bottom_sheet_content.xml
@@ -28,6 +28,7 @@
             android:layout_width="68dp"
             android:layout_height="68dp"
             android:layout_marginTop="16dp"
+            android:padding="14dp"
             tools:src="@drawable/ic_ax_permission_draw_overlays"
             android:tint="@color/ax_permission_white"
             tools:background="@drawable/bg_ax_permission_item_icon"
@@ -44,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            tools:text="알림 접근"
+            tools:text="@string/ax_permission_action_manage_overlay_permission_name"
             android:textSize="20sp"
             android:textColor="@color/ax_permission_text_color_dark"
             android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
@@ -80,7 +81,7 @@
                     android:layout_marginVertical="18dp"
                     android:layout_marginHorizontal="24dp"
                     android:gravity="center"
-                    tools:text="@string/ax_permission_draw_overlays_description"
+                    tools:text="@string/ax_permission_action_manage_overlay_permission_description"
                     android:lineHeight="22sp"
                     android:textSize="16sp"
                     android:textColor="@color/ax_permission_text_color_dark"
