ui: 권한 영구 거부 바텀시트 UI 및 텍스트 문구 개선

--- a/ax-permission/src/main/res/layout/fragment_ax_permission_exit_bottom_sheet.xml
+++ b/ax-permission/src/main/res/layout/fragment_ax_permission_exit_bottom_sheet.xml
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            tools:text="@string/ax_permission_exit_bottom_sheet_button_text_continue"
+            android:text="@string/ax_permission_exit_bottom_sheet_button_text_continue"
             app:layout_constraintTop_toBottomOf="@id/nsv_scroll_container"
             app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintStart_toEndOf="@id/btn_secondary"
@@ -111,7 +111,7 @@
             android:id="@+id/btn_secondary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="@string/ax_permission_exit_bottom_sheet_button_text_exit"
+            android:text="@string/ax_permission_exit_bottom_sheet_button_text_exit"
             app:box_buttonType="secondary"
             app:layout_constraintTop_toTopOf="@id/btn_primary"
             app:layout_constraintBottom_toBottomOf="@id/btn_primary"
