--- a/ax-permission/src/main/res/layout/fragment_ax_permission_permanently_denied_bottom_sheet.xml
+++ b/ax-permission/src/main/res/layout/fragment_ax_permission_permanently_denied_bottom_sheet.xml
@@ -50,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
-            tools:text="@string/ax_permission_exit_bottom_sheet_title"
+            android:text="@string/ax_permission_permanently_denied_dialog_title"
             android:textSize="20sp"
             android:textColor="@color/ax_permission_text_color_dark"
             android:textFontWeight="@integer/ax_permission_font_weight_bold_700"
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:paddingHorizontal="0dp"
-                    tools:text="@string/ax_permission_exit_bottom_sheet_message"
+                    tools:text="@string/ax_permission_permanently_denied_dialog_message_format"
                     android:textSize="14sp"
                     android:lineHeight="20sp"
                     android:textColor="@color/ax_permission_text_color_dark"
@@ -103,7 +103,7 @@
                     android:paddingHorizontal="0dp"
                     android:visibility="gone"
                     tools:visibility="visible"
-                    tools:text="• 아래 설정으로 이동 버튼을 눌러주세요."
+                    tools:text="• 아래 설정으로 이동 버튼을 눌러주세요.\n• 설정 화면에서 권한 메뉴를 눌러주세요.\n• 다른 앱 위에 표시 권한을 누르고 허용을 눌러 권한을 허용해 주세요."
                     android:textSize="15sp"
                     android:lineHeight="20sp"
                     android:textColor="@color/ax_permission_text_color_light"
@@ -118,7 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            tools:text="@string/ax_permission_exit_bottom_sheet_button_text_continue"
+            android:text="@string/ax_permission_permanently_denied_dialog_positive_button"
             app:layout_constraintTop_toBottomOf="@id/nsv_scroll_container"
             app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
             app:layout_constraintStart_toEndOf="@id/btn_secondary"
@@ -128,7 +128,7 @@
             android:id="@+id/btn_secondary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="@string/ax_permission_exit_bottom_sheet_button_text_exit"
+            android:text="@string/ax_permission_permanently_denied_dialog_negative_button"
             app:box_buttonType="secondary"
             app:layout_constraintTop_toTopOf="@id/btn_primary"
             app:layout_constraintBottom_toBottomOf="@id/btn_primary"
